[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Other/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tilesets/TilesetSimple.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Levels (Maps)/functionalitytest.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Other/movecounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Artwork/lightbox.png" type="Texture" id=5]
[ext_resource path="res://Assets/Tilesets/TilesetSimpleUnbreakable.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/Other/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Other/Goal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Other/Pickup.tscn" type="PackedScene" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.4, 0.4, 0.4, 1 )
position = Vector2( 130.813, 161.138 )

[node name="Light2D" type="Light2D" parent="Player"]
texture = ExtResource( 5 )
texture_scale = 0.3
energy = 0.56
shadow_color = Color( 0, 0, 0, 0.92549 )

[node name="Label" type="Label" parent="Player"]
margin_left = -88.4576
margin_top = -194.799
margin_right = -64.4576
margin_bottom = -175.799
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves" parent="." instance=ExtResource( 4 )]
margin_left = 17.9594
margin_top = 15.7145
margin_right = 173.959
margin_bottom = 81.7145

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1.52588e-05 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
occluder_light_mask = 4
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 65536, 0, 0, 65599, 0, 0, 131072, 0, 0, 131135, 0, 0, 196608, 0, 0, 196671, 0, 0, 262144, 0, 0, 262207, 0, 0, 327680, 0, 0, 327743, 0, 0, 393216, 0, 0, 393279, 0, 0, 458752, 0, 0, 458815, 0, 0, 524288, 0, 0, 524351, 0, 0, 589824, 0, 0, 589887, 0, 0, 655360, 0, 0, 655423, 0, 0, 720896, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720959, 0, 0, 786432, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786495, 0, 0, 851968, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 852031, 0, 0, 917504, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917567, 0, 0, 983040, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983103, 0, 0, 1048576, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048639, 0, 0, 1114112, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114175, 0, 0, 1179648, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179711, 0, 0, 1245184, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245247, 0, 0, 1310720, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310783, 0, 0, 1376256, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376319, 0, 0, 1441792, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441855, 0, 0, 1507328, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507391, 0, 0, 1572864, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572927, 0, 0, 1638400, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638423, 0, 0, 1638463, 0, 0, 1703936, 0, 0, 1703957, 0, 0, 1703958, 0, 0, 1703959, 0, 0, 1703999, 0, 0, 1769472, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769495, 0, 0, 1769535, 0, 0, 1835008, 0, 0, 1835029, 0, 0, 1835030, 0, 0, 1835031, 0, 0, 1835071, 0, 0, 1900544, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900607, 0, 0, 1966080, 0, 0, 1966143, 0, 0, 2031616, 0, 0, 2031679, 0, 0, 2097152, 0, 0, 2097215, 0, 0, 2162688, 0, 0, 2162751, 0, 0, 2228224, 0, 0, 2228287, 0, 0, 2293760, 0, 0, 2293823, 0, 0, 2359296, 0, 0, 2359359, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2424882, 0, 0, 2424883, 0, 0, 2424884, 0, 0, 2424885, 0, 0, 2424886, 0, 0, 2424887, 0, 0, 2424888, 0, 0, 2424889, 0, 0, 2424890, 0, 0, 2424891, 0, 0, 2424892, 0, 0, 2424893, 0, 0, 2424894, 0, 0, 2424895, 0, 0 )

[node name="TileMapUnbreak" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 983062, 0, 0, 1048598, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245206, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310742, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376278, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441814, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507350, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572886, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638422, 0, 0, 1703941, 0, 0, 1703942, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1703947, 0, 0, 1703958, 0, 0, 1769494, 0, 0, 1835030, 0, 0 )

[node name="Enemy" parent="." instance=ExtResource( 7 )]
position = Vector2( 284.197, 110.471 )

[node name="Goal" parent="." instance=ExtResource( 8 )]
position = Vector2( 485, 109 )

[node name="Pickup" parent="." instance=ExtResource( 9 )]
position = Vector2( 405.359, 65.0356 )
[connection signal="body_entered" from="Player/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="about_to_show" from="Moves/Counter/Popup" to="." method="_on_Popup_about_to_show"]
[connection signal="popup_hide" from="Moves/Counter/Popup" to="." method="_on_Popup_popup_hide"]

[editable path="Player"]

[editable path="Moves"]
